@@ -1,0 +1,2 @@
+lp/lexdualalgo = TRUE
+lp/lexdualstalling = FALSE
